--- a/src/main/webapp/public/publicStuff.html
+++ b/src/main/webapp/public/publicStuff.html
@@ -8,5 +8,10 @@
 <h1>Zach Public Stuff</h1>
 <hr>
 <P>My Public Stuff Page</P>
+	Return
+	<UL>
+		<LI><a href="../private/">Private Page</a></LI>
+		<LI><a href="../public/">Public Page</a></LI>
+	</UL>
 </body>
 </html>
