--- a/src/main/webapp/private/privateStuff.html
+++ b/src/main/webapp/private/privateStuff.html
@@ -5,8 +5,13 @@
 <title>Zach Private Stuff Page</title>
 </head>
 <body>
-<h1>Zach Private Stuff</h1>
-<hr>
-<P>My Private Stuff Page</P>
+	<h1>Zach Private Stuff</h1>
+	<hr>
+	<P>My Private Stuff Page</P>
+	Return
+	<UL>
+		<LI><a href="../private/">Private Page</a></LI>
+		<LI><a href="../public/">Public Page</a></LI>
+	</UL>
 </body>
 </html>
