--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -5,12 +5,13 @@
 <title>Zach Public Page</title>
 </head>
 <body>
-<h1>Zach Public</h1>
-<hr>
-<P>My Public Page</P>
-<UL>
-<LI><a href="../private/PublicStuff.html">Private Page</a></LI>
-<LI><a href="publicStuff.html">Public Page</a></LI>
-</UL>
+	<h1>Zach Public</h1>
+	<hr>
+	<P>My Public Page</P>
+	<UL>
+		<LI><a href="../private/privateStuff.html">Private Page</a></LI>
+		<LI><a href="publicStuff.html">Public Page</a></LI>
+		<LI><a href="public.jsp">JSP Public Page</a></LI>
+	</UL>
 </body>
 </html>
